# llm-memory-graph

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_INDEX.md  COMPONENT_DIAGRAMS.md  Cargo.toml  DATA_FLOW_SPECIFICATIONS.md  DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_EXAMPLES.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_IMPLEMENTATION_GUIDE.md  INTEGRATION_RUNBOOKS.md  INTEGRATION_SUMMARY.md  LICENSE-MIT  README.md  TECHNICAL_RESEARCH_REPORT.md  WORKSPACE_MIGRATION_SUMMARY.md  build.rs  package-lock.json
.github/workflows/: publish-npm.yml
benches/: batch_performance.rs  cache_performance.rs  pool_performance.rs  streaming_performance.rs
clients/typescript/: .eslintrc.json  .gitignore  .npmignore  INSTALLATION.md  PACKAGE_REPORT.md  README.md  TREE.txt  package-lock.json  package.json  tsconfig.json  verify-package.sh
clients/typescript/examples/: quickstart.ts
clients/typescript/proto/: memory_graph.proto
clients/typescript/src/: client.ts  index.ts  types.ts
crates/llm-memory-graph/: Cargo.toml
crates/llm-memory-graph-cli/: Cargo.toml  README.md
crates/llm-memory-graph-cli/src/: main.rs
crates/llm-memory-graph-client/: Cargo.toml
crates/llm-memory-graph-client/src/: client.rs  error.rs  lib.rs
crates/llm-memory-graph-integrations/: Cargo.toml  README.md
crates/llm-memory-graph-integrations/src/: error.rs  lib.rs  registry.rs  vault.rs
crates/llm-memory-graph-types/: Cargo.toml
crates/llm-memory-graph-types/src/: config.rs  edges.rs  error.rs  ids.rs  lib.rs  mod.rs  nodes.rs  utils.rs
crates/llm-memory-graph/src/: lib.rs  migration.rs
crates/llm-memory-graph/src/engine/: async_memory_graph.rs  mod.rs
crates/llm-memory-graph/src/grpc/: converters.rs  handlers.rs  llm.memory.graph.v1.rs  mod.rs  service.rs  streaming.rs
crates/llm-memory-graph/src/integrations/: mod.rs
crates/llm-memory-graph/src/integrations/registry/: client.rs  mod.rs  types.rs
crates/llm-memory-graph/src/integrations/vault/: archiver.rs  mod.rs  retention.rs
crates/llm-memory-graph/src/observatory/: config.rs  emitter.rs  events.rs  kafka.rs  metrics.rs  mod.rs  prometheus.rs  publisher.rs  streaming.rs
crates/llm-memory-graph/src/plugin/: hooks.rs  manager.rs  registry.rs
crates/llm-memory-graph/src/query/: async_query.rs  mod.rs
crates/llm-memory-graph/src/storage/: async_sled_backend.rs  cache.rs  mod.rs  pooled_backend.rs  serialization.rs  sled_backend.rs
examples/: async_streaming_queries.rs  edge_properties.rs  migration_guide.rs  observatory_demo.rs  prompt_templates.rs  simple_chatbot.rs  tool_invocations.rs
plans/: BETA-PHASE-IMPLEMENTATION-PLAN.md  EXECUTIVE-SUMMARY.md  LLM-Memory-Graph-Plan.md  README.md  ROADMAP-DEPENDENCIES.md  ROADMAP-METRICS.md  ROADMAP-RISK-MITIGATION.md  ROADMAP-VISUAL.md  ROADMAP.md
src/: error.rs  lib.rs  migration.rs
src/engine/: async_memory_graph.rs  mod.rs
src/observatory/: events.rs  kafka.rs  prometheus.rs
src/plugin/: manager.rs  mod.rs
src/query/: async_query.rs  mod.rs
src/storage/: async_sled_backend.rs  mod.rs  pooled_backend.rs  sled_backend.rs
src/types/: edges.rs  nodes.rs
tests/: edge_properties_integration_test.rs  integration_test.rs  plugin_integration_test.rs  template_integration_test.rs  tool_invocation_integration_test.rs
