[workspace]
members = [
    "crates/llm-memory-graph",
    "crates/llm-memory-graph-types",
    "crates/llm-memory-graph-integrations",
    "crates/llm-memory-graph-cli",
    # "crates/llm-memory-graph-client", # TODO: Fix proto compilation issues
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LLM DevOps Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/globalbusinessadvisors/llm-memory-graph"
homepage = "https://github.com/globalbusinessadvisors/llm-memory-graph"

[workspace.dependencies]
# Workspace crates
llm-memory-graph = { path = "crates/llm-memory-graph", version = "0.1.0" }
llm-memory-graph-types = { path = "crates/llm-memory-graph-types", version = "0.1.0" }
llm-memory-graph-client = { path = "crates/llm-memory-graph-client", version = "0.1.0" }
llm-memory-graph-integrations = { path = "crates/llm-memory-graph-integrations", version = "0.1.0" }
llm-memory-graph-cli = { path = "crates/llm-memory-graph-cli", version = "0.1.0" }

# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack
bincode = "1.3"

# Storage backend
sled = "0.34"

# Graph algorithms
petgraph = "0.6"

# Identifiers and time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Utilities
once_cell = "1.19"
regex = "1.10"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
comfy-table = "7.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Performance - Caching
moka = { version = "0.12", features = ["future"] }

# Metrics
prometheus = "0.13"

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# HTTP server for metrics
warp = "0.3"
hyper = "0.14"

# HTTP client for integrations
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
test-log = "0.2"
rand = "0.8"

# Build dependencies
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
