[package]
name = "llm-memory-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/llm-memory-graph"
description = "Graph-based context-tracking and prompt-lineage database for LLM systems"
readme = "../../README.md"
keywords = ["llm", "graph", "memory", "context", "ai"]
categories = ["database-implementations", "development-tools"]
exclude = [
    "data/",
    "deploy/",
    "docs/",
    "grafana/",
    "plans/",
    "scripts/",
    ".github/",
    "node_modules/",
    "package.json",
    "package-lock.json",
    "plugins/",
    "*.disabled",
    ".claude-flow/",
]

[dependencies]
# Workspace crates
llm-memory-graph-types = { workspace = true, features = ["metrics"] }

# Core serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
bincode = { workspace = true }

# Storage backend
sled = { workspace = true }

# Graph algorithms
petgraph = { workspace = true }

# Identifiers and time
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Utilities
once_cell = { workspace = true }
regex = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }

# Performance - Caching
moka = { workspace = true }

# Metrics
prometheus = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# HTTP server for metrics
warp = { workspace = true }
hyper = { workspace = true }

# HTTP client for integrations
reqwest = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
default = []
